--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <!--picture of myself -->
-<h1><img src="me.jpg" alt="logo" width="186" height="403"><br>Emily Chen</h1>
+<h1>Emily Chen</h1>
 
 <!-- About section -->
 <h2>About</h2>
