--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 <!--picture of myself -->
-<h1><br>Emily Chen</h1>
+<h1><br>Emily Chen dfkdsjf</h1>
 
 <!-- About section -->
 <h2>About</h2>
