--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 	<title> Emily Chen</title>
 	<style>
 	body{
-	background-color:#fffafd;
+	background-color:#faf1ea;
 	margin: 0 10%;
 	font-family: monospace;
 	}	
 	h1{
 	text-align: center;
 	font-family: serif;
+    color: #ed2593d5;
 	font-weight: normal;
 	text-transform: uppercase;
-	border-bottom: 1px solid #57b1dc;
+	border-bottom: 1px solid #af4b19d5;
 	margin-top: 30px;
 	}
 	body::after {
@@ -25,10 +26,10 @@
 	right: 90%;
         width: 80%;
         height: 1px;
-        background-color: #57b1dc;
+        background-color: #af4b19d5;
         }
 	h2 {
-	color: #592e18;
+	color: #ed2593d5;
 	font-family: monospace;
 	font-size: 1em;
 	}
@@ -39,21 +40,21 @@
 <h1><br>Emily Chen</h1>
 
 <!-- About section -->
-<h2>About</h2>
+<h2>ABOUT</h2>
 <p>
 I study Applied Mathematics and Computer Science at the University of California San Diego and will be graduating this June. I look forward to apply my analytical skills, expand my knowledge in mathematics and computer science, and share about my experience here!
 </p>
 
-<h2>Projects</h2>
+<h2>PROJECTS</h2>
 <p>
 To be added soon!
 </p>
 
-<h2>Contact Information</h2>
+<h2>WAYS TO REACH ME</h2>
 <p>
-emc001@ucsd.edu<br>
-<a href="https://github.com/eemilycchen">GitHub</a> <br>
-<a href="https://www.linkedin.com/in/eemilycchen/">LinkedIn</a>
+Drop by at my <a href="https://github.com/eemilycchen">GitHub</a> page <br>
+Connect with me on <a href="https://www.linkedin.com/in/eemilycchen/">LinkedIn</a> <br>
+Or just <a href= "mailto: emc001@ucsd.edu"> email</a> me!
 </p>
 </body>
 </html>
