--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ I study Applied Mathematics and Computer Science at the University of California
 
 <h2>PROJECTS</h2>
 <p>
-To be added soon!
+<a href="https://github.com/eemilycchen/Statistical-Analysis">Statistical Analysis on Urbanization</a>
+<!-- add Pictures here later!-->
 </p>
 
 <h2>WAYS TO REACH ME</h2>
