--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- 
+	Author: Emily Chen
+	Help/References: Learning Web Design by Jennifer Robbins
+	Bugs: None
+-->
 <!DOCTYPE html>
 <html> 
 <head>
