added vertical bar

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 <body>
 
 <h1><br>Emily Chen</h1>
-
-<!-- About section -->
+<div class="vertical-line"></div>
 <h2>ABOUT</h2>
 <p>
 I study Applied Mathematics and Computer Science at the University of California San Diego and will be graduating this June. I look forward to apply my analytical skills, expand my knowledge in mathematics and computer science, and share about my experience here!
@@ -70,8 +69,5 @@ Drop by at my <a href="https://github.com/eemilycchen">GitHub</a> page <br>
 Connect with me on <a href="https://www.linkedin.com/in/eemilycchen/">LinkedIn</a> <br>
 Or just <a href= "mailto: emc001@ucsd.edu"> email</a> me!
 </p>
-<!-- <footer>
-	<p>Last Updated April 2024.</p>
-</footer> -->
 </body>
 </html>
