--- a/index.html
+++ b/index.html
@@ -70,11 +70,6 @@
 			color: white;
 			border-top: 1px solid white;
 		}
-	}
-	</style>
-	<!-- How do I add style for links? -->
-	<style>
-		/* unvisited link */
 		a:link {
 			color: white;
 		}
@@ -82,6 +77,29 @@
 		/* visited link */
 		a:visited {
 			color: white;
+		}
+		
+		/* mouse over link */
+		a:hover {
+			color: Hotpink;
+		}
+		
+		/* selected link */
+		a:active {
+			color: green;
+		}
+	}
+	</style>
+	<!-- How do I add style for links? -->
+	<style>
+		/* unvisited link */
+		a:link {
+			color: black;
+		}
+		
+		/* visited link */
+		a:visited {
+			color: black;
 		}
 		
 		/* mouse over link */
