--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ toolbar="bottom" hide-tabs>
 <p><b><i>Hidden Data in Random Matrices with Numerical Linear Algebra</i></b></p>
 <p>
 	This is a rigorous course that builds the understanding of the principal component analysis (PCA) using mathematical theories. It was completed with a final project to apply PCA to find signals among noisy, large datasets. The topics covered were singular value
-	decomposition for matrices,  least squares method, affine subspaces, unbiased estimators, Wigner's semicircle law, and Marchenko-Pastur laws. This was course was taken after Numerical Linear Algebra, which cover topics in
+	decomposition for matrices,  least squares method, affine subspaces, unbiased estimators, Wigner's semicircle law, and Marchenko-Pastur laws. This course was taken after Numerical Linear Algebra, which cover topics on
 	projections, orthogonality, eigendecomposition, and positive definite semisimple matrices, which I found to be helpful for theoretical connections.
 </p>
 <!-- Computer Science Courses -->
@@ -184,14 +184,14 @@ toolbar="bottom" hide-tabs>
 <!-- Interdisciplinary Courses -->
 <p><b><i>Data Science in Practice</i></b></p>
 <p>
-	This is a project-based course. The topics covered were presenting robust, clear visualizations using <code>seaborn</code> and <code>matplotlib</code>, applications of descriptive, exploratory, and inferential anlayses, non-parametric statistics, bootstrapping (resampling), sentiment analysis, TF-IDF, machine learning approaches (supervised vs unsupervised), train-validate-test sets, k-folds cross validation, 
+	This is a project-based course. The topics covered were presenting robust, clear visualizations using <code>seaborn</code> and <code>matplotlib</code>, applications of descriptive, exploratory, and inferential anlayses, non-parametric statistics, bootstrapping (resampling), sentiment analysis using Term Frequency-Inverse Document Frequency (TF-IDF), machine learning approaches (supervised vs unsupervised), train-validate-test sets, k-folds cross validation, 
 	data processing and transformation using <code>scikit-learn</code>, feature engineering, searching for best hyperparameters, model selection, support vector machine (SVM), evaluating accuracy, sensitivity, and specificity with confusion matrices, and geospatial analysis.
 
 </p>
 <p><b><i>Data Ethics</i></b></p>
 <p>
-This is a project-based course. There are three in quarter projects that targets a deeper understanding of ethical values along major intervention points of a data science effort. The course is completed with a final project as a summative effort. Topics covered include consequences of accepting the Neurality Thesis, problem defintion, values, data acquisition, privacy, consent: acts of consent, informed consent, and 
-educated consent, and Goodhart's Law. 
+This is a project-based course. There are three in-quarter projects that targets a deeper understanding of ethical values along major intervention points of a data science effort. The course is completed with a final project as a summative effort. Topics covered include consequences of accepting the Neurality Thesis, problem defintion, values, data acquisition, privacy, forms of consent: acts of consent, informed consent, and 
+educated consent, biases (e.g. deviation from a social or statistical norm), comparative versus noncomparative justice, substantive versus procedural fairness, and Goodhart's Law. 
 </p>
 <h2>WAYS TO REACH ME</h2>
 <p>
