fixed night mode

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
 		.vertical-line {
 		border-left: 5px solid white;
 		}
+		tab {
+		display: inline-block;
+		margin-left: 1em;
+		color: white;
+		}
 		h1 {
 			color:white;
 			border-bottom: 1px solid  white;
@@ -133,7 +138,9 @@ src='https://public.tableau.com/views/urban-data/Dashboard1?:language=en-US&publ
 toolbar="bottom" hide-tabs>
 </tableau-viz>
 </section>
-
+<br>
+</p>
+<p>
 2. A Perspective of Property Value and Police Proximity to Crime Rates at the San Diego Blue Line Trolley <br>
 <tab>visual presentation | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> </tab> <br>
 <section>
@@ -142,12 +149,15 @@ src="https://public.tableau.com/views/incidentcounts/Sheet1?:language=en-US&:sid
 toolbar="bottom" hide-tabs>
 </tableau-viz>
 </section>
+<br>
+</p>
+<p>
 3. Onto Climate Resilience <br>
+<tab>visual presentation | <a href="https://sites.google.com/view/174-final/home" target="_blank">webpage</a></tab> <br>
 <section>
 	<iframe src="https://ourworldindata.org/grapher/total-ghg-emissions?tab=map" loading="lazy" style="width: 100%; height: 600px; 
 	border: 0px none;" allow="web-share; clipboard-write"></iframe>
 </section>
-<tab>visual presentation | <a href="https://sites.google.com/view/174-final/home" target="_blank">webpage</a></tab>
 </p>
 
 <h2>COURSES</h2>
@@ -186,7 +196,7 @@ toolbar="bottom" hide-tabs>
 </p>
 <p><b><i>Data Ethics</i></b></p>
 <p>
-This is a project-based course. There are three in-quarter projects that targets a deeper understanding of ethical values along major intervention points of a data science effort. The course is completed with a final project as a summative effort. Topics covered include consequences of accepting the Neurality Thesis, problem defintion, values, data acquisition, privacy, forms of consent: acts of consent, informed consent, and 
+This is a project-based course. There are three in-quarter projects that targets a deeper understanding of ethical values along major intervention points of a data science effort. The course is completed with a final project as a summative effort. Topics covered include consequences of accepting the Neutrality Thesis, problem defintion, values, data acquisition, privacy, forms of consent: acts of consent, informed consent, and 
 educated consent, biases (e.g. deviation from a social or statistical norm), comparative versus noncomparative justice, substantive versus procedural fairness, and Goodhart's Law. 
 </p>
 <h2>WAYS TO REACH ME</h2>
