--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- How can we link logos and links together? -->
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+
 	<title> Emily Chen</title>
 	<!-- <title>Tableau Visualization</title> -->
 	<script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
@@ -40,6 +45,11 @@
 		color:  #000000b8;
 		font-family: Georgia, serif;
 		font-size: 1.2em;
+	}
+	h3 {
+		color:  #000000b8;
+		font-family: Georgia, serif;
+		font-size: 1em;
 	}
 	/* How do I update the footnote? */
 	body::after {
@@ -85,6 +95,9 @@
 			border-bottom: 1px solid  white;
 		}
 		h2 {
+			color: white;
+		}
+		h3 {
 			color: white;
 		}
 		p {
@@ -199,12 +212,10 @@ toolbar="bottom" hide-tabs>
 This is a project-based course. There are three in-quarter projects that targets a deeper understanding of ethical values along major intervention points of a data science effort. The course is completed with a final project as a summative effort. Topics covered include consequences of accepting the Neutrality Thesis, problem defintion, values, data acquisition, privacy, forms of consent: acts of consent, informed consent, and 
 educated consent, biases (e.g. deviation from a social or statistical norm), comparative versus noncomparative justice, substantive versus procedural fairness, and Goodhart's Law. 
 </p>
-<h2>WAYS TO REACH ME</h2>
+<h2>WAYS TO REACH ME </h2>
 <p>
-
-Drop by at my <a href="https://github.com/eemilycchen" target="_blank">GitHub</a> page  &#x1F44B; <br>
-Connect with me on <a href="https://www.linkedin.com/in/eemilycchen/ "target="_blank">LinkedIn</a> &#x1F91D; <br>
-Or just <a href= "mailto: emily.764537@gmail.com"> email</a> me! &#x1F4E8;
+<a href="https://github.com/eemilycchen" target="_blank"><i class="fab fa-github" style='font-size:30px'></i></a> 
+<a href="https://www.linkedin.com/in/eemilycchen/" target="_blank"><i class="fab fa-linkedin" style='font-size:30px'></i></a>
 </p>
 </body>
 </html>
