--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!-- 
 	Author: Emily Chen
-	Website Skeleton Code: Learning Web Design by Jennifer Robbins
 	Bugs: None
 -->
 <!DOCTYPE html>
@@ -12,7 +11,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 
 	<title> Emily Chen</title>
-	<!-- <title>Tableau Visualization</title> -->
+	<!-- Tableau Visualization -->
 	<script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
 	<style>
 	body {
@@ -131,7 +130,7 @@
 	<h2>ABOUT</h2>
 	<p>
 	I graduated with a Bachelor of Science degree in Applied Mathematics, with a minor in Computer Science at the University of California San Diego. For four years as 
-	a math instructor, I strived to be vigilant and inclusive to problem-solve mathematical problems and adapt to a wide diversity of students. 
+	a math tutor and instructor, I strived to be vigilant and inclusive to problem-solve mathematical problems and adapt to a wide diversity of students. 
 	My studies fostered my passion in mathematics and evolved my direction toward artifical intelligence. My worldview and experiences empowers me to continue using mathematics and computer science to make a meaningful difference. 
 	</p></div>
 </blockquote>
