--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- How can we combine logos and links together? -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.2/css/all.css">
 
 	<title> Emily Chen</title>
 	<!-- Tableau Visualization -->
@@ -136,7 +136,7 @@
 </blockquote>
 <h2>PROJECTS</h2>
 <p>
-1. Statistical Analysis on Urbanization <br>
+1. Investigating Urban Land Expansion <br>
 <tab>visual presentation | <a href="https://github.com/eemilycchen/Statistical-Analysis" target="_blank">source code</a></tab> 
 <!-- 
 	How can I do Tableau chart embedding?
@@ -213,6 +213,7 @@ educated consent, biases (e.g. deviation from a social or statistical norm), com
 <p>
 <a href="https://github.com/eemilycchen" target="_blank"><i class="fab fa-github" style='font-size:30px'></i></a> 
 <a href="https://www.linkedin.com/in/eemilycchen/" target="_blank"><i class="fab fa-linkedin" style='font-size:30px'></i></a>
+<a href="https://x.com/eemilycchen" target="_blank"><i class="fab fa-x-twitter" style='font-size:30px'></i></a>
 </p>
 </body>
 </html>
