added presentations for blue line trolley

--- a/index.html
+++ b/index.html
@@ -135,24 +135,24 @@
 	</p></div>
 </blockquote>
 <h2>PROJECTS</h2>
-<p>
+<!-- <p>
 1. Investigating Urban Land Expansion <br>
-<tab>visual presentation | <a href="https://github.com/eemilycchen/Statistical-Analysis" target="_blank">source code</a></tab> 
+<tab>visual presentation pdf, pptx | <a href="https://github.com/eemilycchen/Statistical-Analysis" target="_blank">source code</a></tab>  -->
 <!-- 
 	How can I do Tableau chart embedding?
 	https://help.tableau.com/current/api/embedding_api/en-us/index.html
  -->
-<section>
+<!-- <section>
 <tableau-viz id="tableauViz"       
 src='https://public.tableau.com/views/urban-data/Dashboard1?:language=en-US&publish=yes&:sid=&:display_count=n&:origin=viz_share_link'      
 toolbar="bottom" hide-tabs>
 </tableau-viz>
 </section>
 <br>
-</p>
+</p> -->
 <p>
-2. A Perspective of Property Value and Police Proximity to Crime Rates at the San Diego Blue Line Trolley <br>
-<tab>visual presentation | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> </tab> <br>
+1. A Perspective of Property Value and Police Proximity to Crime Rates at the San Diego Blue Line Trolley <br>
+<tab>visual presentation <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pdf" download>pdf</a>, <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pptx" download>pptx</a> | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> </tab> <br>
 <section>
 <tableau-viz id="tableauViz"
 src="https://public.tableau.com/views/incidentcounts/Sheet1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link"
@@ -162,8 +162,8 @@ toolbar="bottom" hide-tabs>
 <br>
 </p>
 <p>
-3. Onto Climate Resilience <br>
-<tab>visual presentation | <a href="https://sites.google.com/view/174-final/home" target="_blank">webpage</a></tab> <br>
+2. Onto Climate Resilience <br>
+<tab>visual presentation pdf, pptx | <a href="https://sites.google.com/view/174-final/home" target="_blank">webpage</a></tab> <br>
 <section>
 	<iframe src="https://ourworldindata.org/grapher/total-ghg-emissions?tab=map" loading="lazy" style="width: 100%; height: 600px; 
 	border: 0px none;" allow="web-share; clipboard-write"></iframe>
