--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <h2>PROJECTS</h2>
 <p>
 1. A Perspective of Property Value and Police Proximity to Crime Rates at the San Diego Blue Line Trolley <br>
-<tab>visual presentation <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pdf" target="_blank", download>pdf</a>, <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pptx"  target="_blank", download>pptx</a> | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> </tab> <br>
+<tab>summary <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pdf" target="_blank", download>pdf</a>, <a href="visual_presentations/A_Perspective_of_Property_Value_and_Police_Proximity_to_Crime_Rates_at_the_San_Diego_Blue_Line_Trolley.pptx"  target="_blank", download>pptx</a> | <a href="https://github.com/eemilycchen/blue-line-trolley" target="_blank">source code</a> </tab> <br>
 <section>
 <tableau-viz id="tableauViz"
 src="https://public.tableau.com/views/incidentcounts/Sheet1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link"
@@ -148,7 +148,7 @@ toolbar="bottom" hide-tabs>
 </p>
 <p>
 2. Onto Climate Resilience <br>
-<tab>visual presentation pdf, pptx | <a href="https://sites.google.com/view/174-final/home" target="_blank">webpage</a></tab> <br>
+<tab>summary pdf, pptx | <a href="https://sites.google.com/view/174-final/home" target="_blank">webpage</a></tab> <br>
 <section>
 	<iframe src="https://ourworldindata.org/grapher/total-ghg-emissions?tab=map" loading="lazy" style="width: 100%; height: 600px; 
 	border: 0px none;" allow="web-share; clipboard-write"></iframe>
@@ -158,7 +158,7 @@ toolbar="bottom" hide-tabs>
 <!-- New project under construction! :D -->
 <!-- <p>
 3. Investigating Urban Land Expansion <br>
-<tab>visual presentation pdf, pptx | <a href="https://github.com/eemilycchen/Statistical-Analysis" target="_blank">source code</a></tab> -->
+<tab>summary pdf, pptx | <a href="https://github.com/eemilycchen/Statistical-Analysis" target="_blank">source code</a></tab> -->
 <!-- 
 	How can I do Tableau chart embedding?
 	https://help.tableau.com/current/api/embedding_api/en-us/index.html
