--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 	<h2>ABOUT</h2>
 	<p>
 	I graduated with a Bachelor of Science degree in Applied Mathematics, with a minor in Computer Science at the University of California San Diego. For four years as 
-	a math tutor and instructor, I strived to be vigilant and inclusive to problem-solve mathematical problems and adapt to a wide diversity of students. 
-	My studies fostered my passion in mathematics and evolved my direction toward artifical intelligence. My worldview and experiences empowers me to continue using mathematics and computer science to make a meaningful difference. 
+	a tutor and instructor, I vigilantly balanced between problem-solve mathematical problems and adapting to a wide diversity of students. 
+	My studies fostered my passion in mathematics and transpired my direction toward uncharted areas of artifical intelligence. 
 	</p></div>
 </blockquote>
 <h2>PROJECTS</h2>
